  allocation due to problems with resolution change. (RFB)
- vdi/vdi_raster.c: Fix crash in lineA Copy Raster Form ($a00e). (RFB)

2014-04-09
- aes/gemmnlib.c include/config.h: Replace NUM_DESKACC with NUM_ACCS for
  compatibility with TOS and future changes. (RFB)

2014-04-10
- aes/geminit.c aes/gemlib.h aes/gemmnlib.c aes/gemmnlib.h: Fix bug that
  caused accessories to stop responding after a few resolution changes. (RFB)

2014-04-19
- aes/gemshlib.c: Code cleanup: use PD struct instead of ptr to LONGs, and
  eliminate unnecessary zeroing. (RFB)
- aes/gemshlib.c bdos/proc.c bios/bios.c include/asm.h: Code cleanup: use
  #defines instead of hardcoded numbers for Pexec() mode. (RFB)

2014-05-03
- bios/ikbd.c: Do not disable IKBD mouse and joystick on startup. (VRI)
- aes/gemfslib.c aes/geminit.c aes/gemlib.h aes/gemsclib.h aes/gemshlib.h
  include/dta.h: Define DTA as structure to force alignment (fixes
  regression causing crashes on 68000). (RFB)
- bdos/fs.h bdos/fsmain.c bdos/proc.c include/pd.h: Code cleanup: use
  DTA* rather than char* in PD definition. (RFB)
- aes/gemdos.c: Code cleanup: use DTA instead of char[] in dos_label(). (RFB)
- bdos/fsmain.c: Fix compiler warnings. (RFB)

2014-05-04
- desk/deskbind.h desk/deskdir.c desk/deskfpd.c: Code cleanup: use DTA
  definition from dta.h. (RFB)
- aes/geminit.c aes/gemshlib.c aes/gemshlib.h aes/gemstart.S: Fix big
  memory leak: the memory occupied by DAs was not freed on resolution
  change. (RFB)

2014-05-05
- aes/gemstart.S: Use AES process 0 supervisor stack when loading DAs &
  desktop instead of separate stack. (RFB)
- bios/disk.c: Reduce MAXPHYSSECTSIZE to 512 to save 3K of RAM space. (RFB)

2014-05-06
- aes/gemctrl.c aes/geminit.c aes/gemlib.h: Dynamically allocate process
  structures for DAs (saves RAM). (RFB)

2014-05-07
- bdos/bdosmain.c bdos/fsbuf.c bios/blkdev.c bios/blkdev.h bios/tosvars.h
  include/ahdi.h: Dynamically allocate sector buffers (saves RAM). (RFB)